# myclib

./: .gitignore  build_stdlib.sh  extract_stdlib.py  printDir.py  run_client.sh  run_server.sh
bardak-server/: .gitignore  CMakeLists.txt
bardak-server/core/: CMakeLists.txt
bardak-server/core/map_core/: CMakeLists.txt
bardak-server/core/map_core/src/: Entity.cpp  Level.cpp  Tile.cpp
bardak-server/core/modlib/inc/: modlib_manager.hpp  modlib_mod.hpp
bardak-server/entity_components/: CMakeLists.txt
bardak-server/entity_components/inc/: ECbasis.hpp
bardak-server/entity_components/src/: Armor.cpp  Attack.cpp  EntityBase.cpp  Group.cpp  Health.cpp
bardak-server/modlib-ifc/: CMakeLists.txt
bardak-server/modlib-ifc/inc/: Animator.hpp  AssetManager.hpp  BmServerModule.hpp  Event.hpp  Map.hpp  Vec2.hpp
bardak-server/mods/anim-viz/: CMakeLists.txt  mod.cpp
bardak-server/mods/animator/: CMakeLists.txt  mod.cpp
bardak-server/mods/assets/: CMakeLists.txt  main.cpp
bardak-server/mods/characters/: person_base.hpp
bardak-server/mods/characters/ghost/: main.cpp
bardak-server/mods/characters/pacman/: main.cpp
bardak-server/mods/characters/person/: CMakeLists.txt  main.cpp
bardak-server/mods/characters/person/inc/: person.hpp  person_animator.hpp  person_controller.hpp  person_manager.hpp
bardak-server/mods/map/: CMakeLists.txt  main.cpp  map_animator.hpp
bardak-server/mods/tty-graphics/: CMakeLists.txt  main.cpp
bardak-server/mods/vis/: CMakeLists.txt  main.cpp  render.hpp  snapshot.hpp  visual.hpp
bardak-server/servers/msva/src/: all.hpp  msva_api.hpp  srv.cpp
bardak-server/specs/binmsg/inc/: binmsg.hpp
bardak-server/specs/proto/: gmap.pan
bardak-server/tools/pan/inc/: wrapper.hpp
bardak-server/tools/pan/src/: libpan.c
client/: CMakeLists.txt
client/myclib/: CMakeLists.txt
client/myclib/inc/: stdio.h  stdlib.h  string.h  unistd.h
client/myclib/include/: myerrno.h  mystdlib.h  myunistd.h
client/myclib/src/: startup.s  stdio.c  stdlib.c  string.c  unistd.c
client/src/: bot.c  main.c  net.c  protocol.c
libs/: CMakeLists.txt
libs/clientlib/: CMakeLists.txt
libs/clientlib/inc/: lang_pan.h  net.h  wrapper.hpp
libs/clientlib/src/: lang_pan.c  main.c  net.c
libs/linker/: merge.ld
libs/myclib/: CMakeLists.txt  myclibConfig.cmake.in
libs/myclib/inc/: mycmp.h  mystdio.h
libs/myclib/src/: mycmp.c  mystdio.c  mystdlib.c
libs/wrapperlib/: CMakeLists.txt
libs/wrapperlib/src/: wrapper.s
myclib/: CMakeLists.txt
myclib/inc/: mystdio.h  mystring.h
myclib/src/: myerrno.c  mystring.c  myunistd.c  startup.s
